<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Barrel Racing</string>
    <string name="action_settings">Settings</string>
    <string name="game_over">Game Over!</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="lAccelerometer">Accelerometer</string>
    <string name="lRadius">Radius of barrel</string>
    <string name="high_score_list_no_items">No high score entries to display</string>
    <string name="scoreEntry">Please enter score</string>
    <string name="btnScoreEntry">Enter score</string>
    <string name="btnViewScores">View score</string>
    <string name="badInput">Unable to process that input</string>
    <string name="btnCust">Save</string>
    <string name="btnGame">Start</string>
    
    <string name="txtStart">Start</string>
	<string name="txtYourScore">Your Score</string>
	<string name="txtHighScore">High Score</string>
	<string name="txtExit">Exit</string>
	<string name="txtHelp">Help</string>
	<string name="txtDescription">Description</string>
	<string name="helpdescription">
        				1.Tap on the screen to start
       				   2. Tilt the device so that the pawn moves around the screen
        			   3. Move the pawn in such a way that it circles all the three barrels 
      				   4. The barrels turn green once they have been circled
       				   5. The game ends if the pawn touches any of the barrel
       				   6. 5 seconds will be added to the timer if the pawn touches the wall</string>

</resources>
