<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    
<TextView
	    android:id="@+id/textView3"
	    android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginLeft="70dp"
	    android:text="@string/txtYourScore"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/textView2"	   
	    android:text="@string/txtHighScore"
	    android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginLeft="70dp"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	
    <Button
        android:id="@+id/bstart"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginLeft="70dp"
        android:text="@string/txtStart" />
	

	<Button
	    android:id="@+id/bexit"
	    android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginLeft="70dp"	   
	    android:text="@string/txtExit" 
	    />

	<Button
	    android:id="@+id/bhelp"
	    android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginLeft="70dp"
	    android:text="@string/txtHelp" />

	<ImageButton
	    android:id="@+id/imageButton1"
	    android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="120dp"
	    android:src="@drawable/images" 
	    android:contentDescription="@string/txtDescription"
	    />

</LinearLayout>
