<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <TextView
	    android:id="@+id/textView3"
	    android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
	    android:text="@string/txtYourScore"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
	    android:id="@+id/textViewYourScore"
	    android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/textView3"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="150dp"
	    android:layout_height="45dp"
	    android:layout_marginLeft="50dp"
	    android:layout_alignRight="@+id/textView3"
	    android:layout_below="@+id/textView3"
	    android:layout_marginRight="16dp"
	    android:text="@string/txtHighScore"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/textViewYourHighScore"
	    android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_toRightOf="@+id/textView2"
        android:layout_below="@+id/textViewYourScore"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<Button
	    android:id="@+id/bstart"
	    android:layout_width="160dp"
	    android:layout_height="45dp"
	    android:layout_alignBaseline="@+id/bhelp"
	    android:layout_alignBottom="@+id/bhelp"
	    android:layout_alignParentRight="true"
	     android:layout_marginLeft="30dp"
	    android:text="@string/txtStart" />

	<Button
	    android:id="@+id/bexit"
	    android:layout_width="160dp"
	    android:layout_height="45dp"
	    android:layout_alignBaseline="@+id/bhelp"
	    android:layout_alignBottom="@+id/bhelp"
	    android:layout_alignParentLeft="true"
	    android:layout_toLeftOf="@+id/bhelp"
	    android:layout_marginLeft="26dp"
	    android:text="@string/txtExit" />

	<ImageButton
	    android:id="@+id/imageButton1"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_alignRight="@+id/bstart"
	    android:layout_alignTop="@+id/textView3"
	    android:layout_marginRight="19dp"
	    android:layout_marginTop="15dp"
	    android:contentDescription="@string/txtDescription"
	    android:src="@drawable/images" />

	<Button
	    android:id="@+id/bhelp"
	    android:layout_width="160dp"
	    android:layout_height="45dp"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="14dp"
	    android:layout_marginLeft="19dp"
	    
	    android:layout_toLeftOf="@+id/bstart"
	    android:text="@string/txtHelp" />

</RelativeLayout>