<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    
     >

    <TextView
        android:id="@+id/label_accel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lAccelerometer" 
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        />
    
    
    
    <SeekBar
        android:id="@+id/seekBarAcc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_accel"
        android:layout_marginLeft="20dp"
        android:max="10"
        android:progress="5"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarAcc"
        android:layout_centerInParent="true"
 />
    
    <TextView android:id="@+id/label_radius"
        	 android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/lRadius"
        	android:layout_below="@+id/textView1"
        	android:layout_marginLeft="20dp"/>
    
    <SeekBar
        
        android:id="@+id/seekBarRad"
        android:layout_width="300dp"
        android:layout_height="wrap_content"       	
        android:max="10"
        android:layout_below="@+id/label_radius"
    	android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarRad"
        android:layout_marginLeft="10dp"
         android:layout_centerInParent="true"
/>
    <Button
        android:id="@+id/custBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCust" 
        android:layout_below="@+id/textView2"
        android:layout_centerInParent="true"/>
        

</RelativeLayout>
